--- a/assets/css/aqua/utilities/position_utilities.sass
+++ b/assets/css/aqua/utilities/position_utilities.sass
@@ -1,3 +1,11 @@
 .centered
   @include centered
 
+.absolute
+  @include absolute
+
+.fixed
+  @include fixed
+
+.relative
+  @include relative
